@@ -2,6 +2,17 @@
 
         Reviewed by Kenneth Rohde Christiansen.
 
+        [Qt] Add instantiation tests for QWebInspector.
+
+        * tests/qwebinspector/qwebinspector.pro: Added.
+        * tests/qwebinspector/tst_qwebinspector.cpp: Added.
+        (tst_QWebInspector::attachAndDestroy):
+        * tests/tests.pro:
+
+2009-11-19  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
         [Qt] Fix QWebInspector destruction problem.
         https://bugs.webkit.org/show_bug.cgi?id=31664
 
